--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/Senapedro/nlw-setup" target="_blank">Senapedro/nlw-setup</a>
+                <a href="https://senapedro.github.io/nlw-setup/" target="_blank">Senapedro/nlw-setup</a>
               </h6>
               <p>O Habits é um app para ajudar a rastrear os hábitos.</p>
               <hr>
@@ -173,7 +173,7 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/Senapedro/Coffe" target="_blank">Senapedro/Coffe</a>
+                <a href="https://senapedro.github.io/Coffe/" target="_blank">Senapedro/Coffe</a>
               </h6>
               <p>Projeto com a temática de cafeteria utilizando Bootstrap para aulas de "Frameworks de CSS" para a Trilha de CSS da DIO.</p>
             </div>
